Fix spacing between two sections, also update spacing of tab nav (#3228)
The combined effect of `padding: 3rem` and margin: 3rem` caused the
spacing for `wrapper--bottom-space` to have a total of 6rem on tablet+
screen size. It made the spacing look weird and wasted a lot of vertical
spacing.

--- a/hypha/static_src/src/sass/apply/components/_round-block.scss
+++ b/hypha/static_src/src/sass/apply/components/_round-block.scss
@@ -70,11 +70,6 @@
         }
     }
 
-    &__date,
-    &__determination {
-        color: $color--primary;
-    }
-
     &__title {
         color: $color--default;
         font-size: map-get($font-sizes, epsilon);
@@ -86,5 +81,19 @@
         padding: 20px;
         background-color: $color--white;
         border: 1px solid $color--light-mid-grey;
+    }
+
+    @include media-query(tablet-landscape) {
+        &__title {
+            flex-basis: 25em;
+        }
+
+        &__fund {
+            flex-basis: 20em;
+        }
+
+        &__view {
+            flex-basis: 5em;
+        }
     }
 }
